# ot-harjoitustyo

./: .coveragerc  .env.test  .gitignore  README.md  index.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
Documentation/: architecture.md  changelog.md  hourly_accounting.md  manual.md  requirements_specification.md  testing.md  time_tracking.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pytest.ini
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: card.py  user.py
src/repositories/: card_repository.py  user_repository.py
src/services/: magic_service.py
src/tests/: conftest.py
src/tests/repositories/: card_repository_test.py  user_repository_test.py
src/tests/services/: magic_service_test.py
src/ui/: create_user_view.py  login_view.py  magic_card_view.py  ui.py
src/utils/: card_utils.py  test_utils.py  ui_utils.py
src/utils/database/: database_connection.py  initialize_database.py
