[project]
name = "ot-harjoitustyo"
version = "0.5.0"
description = "App for archiving Magic the Gathering cards"
authors = [
    {name = "jtpcode",email = "152286055+jtpcode@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ttkwidgets (>=0.13.0,<0.14.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
pylint = "^3.3.6"
autopep8 = "^2.3.2"
pytest-dotenv = "^0.5.2"

